<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/fragment_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/fragment_vertical_margin"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/to_cards"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="@dimen/card_view_elevation"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cards" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/to_speaking"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="@dimen/card_view_elevation"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/speaking" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/to_hearing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="@dimen/card_view_elevation"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/hearing" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/to_pair_find"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="@dimen/card_view_elevation"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/pair_find" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/to_word_comp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="@dimen/card_view_elevation"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/word_comp" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/to_true_false"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="@dimen/card_view_elevation"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/true_false" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/to_translation_choice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="@dimen/card_view_elevation"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/translation_choice" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/to_image_translation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="@dimen/card_view_elevation"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/image_translation" />
    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="84dp">
        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fast.practice.button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="@dimen/fast_practice_button_width"
            android:layout_height="@dimen/fast_practice_button_height"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/fast_practice_button"
            android:text="@string/fast_practice"
            android:textAllCaps="true"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />
    </FrameLayout>


</LinearLayout>