<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/toolbar_margin"
                android:background="@drawable/banner_img"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginTop="@dimen/double_activity_horizontal_margin"
                    android:text="@string/select_mode"
                    android:textColor="@color/dark_grey" />

                <Button xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/fast.practice.button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="@dimen/fast_practice_button_width"
                    android:layout_height="@dimen/fast_practice_button_height"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/fast_practice_button"
                    android:text="@string/fast_practice"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_grey"
                    android:textSize="16sp" />
            </FrameLayout>


            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                tools:ignore="Overdraw">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mode"
                    android:textAlignment="center"
                    android:textColor="@color/dark_grey"
                    android:textSize="20sp" />

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include layout="@layout/main_exercises" />
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>